fix(styling): Fix overflowing issues in layout

--- a/static/styles/_layout.scss
+++ b/static/styles/_layout.scss
@@ -24,6 +24,7 @@ html {
 html, body {
     max-width: 100vw;
     overflow-x: hidden;
+    position: relative;
 }
 
 section, header {
@@ -56,9 +57,6 @@ main {
 
 .particles-js-canvas-el {
     position: fixed;
-    overflow: hidden;
-    width: 100svw;
-    height: 100svh;
     z-index: -1;
     top: 0;
     left: 0;
